ADD & FIX: animations when clicken goback, no longer refresh page

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- ng deploy --base-href=https://gmast3rr.github.io/portfolio/ -->
+  <!-- ng deploy --base-href=https://lucasramallo.dev/ -->
   <meta charset="utf-8">
   <title>Portfolio</title>
   <base href="/portfolio">
